fix sizing on mobile:

--- a/main.css
+++ b/main.css
@@ -155,7 +155,7 @@
     
    		.hamb {
         		display: none;
-    		}
+    		}	
 	}	
 
 	/* main */
@@ -168,7 +168,7 @@
 	}
 
 	h1 {
-		font-size: 44px;
+		font-size: 4.0vw;
 		margin: 10px;
 	}
 
